Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122428

[REG] Axis dragging does not work in Graph Gallery example

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 FF
    • 6.8
    • Graphs: 3D
    • None
    • ddc76bb7e (dev)

    Description

      Axis dragging has been broken after 6.7 in Graph Gallery > Scatter Graph example after 6.7. It works in Axis Handling > Axis Dragging still.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            spouke Sakaria Pouke
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes