Add grabChanged signal to 3D graphs

Allows the signal to be connected to for custom input handling

Fixes: QTBUG-122428
Change-Id: Ide9875454f9fee4431ed0fc8036b6cf967a01b94
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>